# r5cop_demo

./: CMakeLists.txt  README.md  package.xml
launch/: amigo_utils.launch  jaguar_utils.launch  x80sv_utils.launch
src/challenge/amigo/: challenge_amigo.py  clean_inspect.py  handle_detected_entities.py  operator_cleanup.py  other_robot_cleanup.py  self_cleanup.py
src/util/: ed_server_bridge.py
